--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.telefonica</groupId>
+			<artifactId>events-schemas</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/resources/lib/events-schemas-1.0.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
