Add new property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,10 @@ logging.level.root=INFO
 
 #Kafka Configuration
 spring.kafka.bootstrap-servers=192.168.2.131:9093
-
 spring.kafka.topic.source=myTopic4
-
 spring.kafka.topic.matching=delay_topic
 spring.kafka.topic.non-matching=direct_topic
+spring.kafka.consumer.group-id=kafka-headers-exchange-service
 
 spring.kafka.header.filter.keys=FetchDeliveryMode,DelayedMode
 spring.kafka.header.filter.values=true,true
